falco_plugin_api/plugin/plugin_api.h


typedef struct
{
	const ss_plugin_table_fieldinfo* (*list_table_fields)(ss_plugin_table_t* t, uint32_t* nfields);
	ss_plugin_table_field_t* (*get_table_field)(ss_plugin_table_t* t, const char* name, ss_plugin_state_type data_type);
	ss_plugin_table_field_t* (*add_table_field)(ss_plugin_table_t* t, const char* name, ss_plugin_state_type data_type);
} ss_plugin_table_fields_vtable;
typedef struct
{
	const ss_plugin_table_fieldinfo* (*list_table_fields)(ss_plugin_table_t* t, uint32_t* nfields);
	ss_plugin_table_field_t* (*get_table_field)(ss_plugin_table_t* t, const char* name, ss_plugin_state_type data_type);
	ss_plugin_table_field_t* (*add_table_field)(ss_plugin_table_t* t, const char* name, ss_plugin_state_type data_type);
} ss_plugin_table_fields_vtable_ext;
typedef struct
{
	const char*	(*get_table_name)(ss_plugin_table_t* t);
	uint64_t (*get_table_size)(ss_plugin_table_t* t);
	ss_plugin_table_entry_t* (*get_table_entry)(ss_plugin_table_t* t, const ss_plugin_state_data* key);
	ss_plugin_rc (*read_entry_field)(ss_plugin_table_t* t, ss_plugin_table_entry_t* e, const ss_plugin_table_field_t* f, ss_plugin_state_data* out);
} ss_plugin_table_reader_vtable;
typedef void ss_plugin_table_iterator_state_t;
typedef ss_plugin_bool (*ss_plugin_table_iterator_func_t)(ss_plugin_table_iterator_state_t* s, ss_plugin_table_entry_t* e);
typedef struct
{
	const char*	(*get_table_name)(ss_plugin_table_t* t);
	uint64_t (*get_table_size)(ss_plugin_table_t* t);
	ss_plugin_table_entry_t* (*get_table_entry)(ss_plugin_table_t* t, const ss_plugin_state_data* key);
	ss_plugin_rc (*read_entry_field)(ss_plugin_table_t* t, ss_plugin_table_entry_t* e, const ss_plugin_table_field_t* f, ss_plugin_state_data* out);
	void (*release_table_entry)(ss_plugin_table_t* t, ss_plugin_table_entry_t* e);
	ss_plugin_bool (*iterate_entries)(ss_plugin_table_t* t, ss_plugin_table_iterator_func_t it, ss_plugin_table_iterator_state_t* s);
} ss_plugin_table_reader_vtable_ext;
typedef struct
{
	ss_plugin_rc (*clear_table)(ss_plugin_table_t* t);
	ss_plugin_rc (*erase_table_entry)(ss_plugin_table_t* t, const ss_plugin_state_data* key);
	ss_plugin_table_entry_t* (*create_table_entry)(ss_plugin_table_t* t);
	void (*destroy_table_entry)(ss_plugin_table_t* t, ss_plugin_table_entry_t* e);
	ss_plugin_table_entry_t* (*add_table_entry)(ss_plugin_table_t* t, const ss_plugin_state_data* key, ss_plugin_table_entry_t* entry);
	ss_plugin_rc (*write_entry_field)(ss_plugin_table_t* t, ss_plugin_table_entry_t* e, const ss_plugin_table_field_t* f, const ss_plugin_state_data* in);
} ss_plugin_table_writer_vtable;
typedef struct
{
	ss_plugin_rc (*clear_table)(ss_plugin_table_t* t);
	ss_plugin_rc (*erase_table_entry)(ss_plugin_table_t* t, const ss_plugin_state_data* key);
	ss_plugin_table_entry_t* (*create_table_entry)(ss_plugin_table_t* t);
	void (*destroy_table_entry)(ss_plugin_table_t* t, ss_plugin_table_entry_t* e);
	ss_plugin_table_entry_t* (*add_table_entry)(ss_plugin_table_t* t, const ss_plugin_state_data* key, ss_plugin_table_entry_t* entry);
	ss_plugin_rc (*write_entry_field)(ss_plugin_table_t* t, ss_plugin_table_entry_t* e, const ss_plugin_table_field_t* f, const ss_plugin_state_data* in);
} ss_plugin_table_writer_vtable_ext;
typedef struct
{
	const char* name;
	ss_plugin_state_type key_type;
	ss_plugin_table_t* table;
	ss_plugin_table_reader_vtable reader;
	ss_plugin_table_writer_vtable writer;
	ss_plugin_table_fields_vtable fields;
	ss_plugin_table_reader_vtable_ext* reader_ext;
	ss_plugin_table_writer_vtable_ext* writer_ext;
	ss_plugin_table_fields_vtable_ext* fields_ext;
} ss_plugin_table_input;
typedef struct
{
	ss_plugin_table_info* (*list_tables)(ss_plugin_owner_t* o, uint32_t* ntables);
	ss_plugin_table_t* (*get_table)(ss_plugin_owner_t* o, const char* name, ss_plugin_state_type key_type);
	ss_plugin_rc (*add_table)(ss_plugin_owner_t* o, const ss_plugin_table_input* in);
	ss_plugin_table_fields_vtable fields;
	ss_plugin_table_fields_vtable_ext* fields_ext;
} ss_plugin_init_tables_input;
typedef void (*ss_plugin_log_fn_t)(ss_plugin_owner_t* o, const char* component, const char* msg, ss_plugin_log_severity sev);
typedef struct ss_plugin_init_input
{
	const char* config;
	ss_plugin_owner_t* owner;
	const char *(*get_owner_last_error)(ss_plugin_owner_t *o);
	const ss_plugin_init_tables_input* tables;
	ss_plugin_log_fn_t log_fn;
} ss_plugin_init_input;
typedef struct ss_plugin_field_extract_input
{
	ss_plugin_owner_t* owner;
	const char *(*get_owner_last_error)(ss_plugin_owner_t *o);
	uint32_t num_fields;
	ss_plugin_extract_field *fields;
	ss_plugin_table_reader_vtable table_reader;
	ss_plugin_table_reader_vtable_ext* table_reader_ext;
} ss_plugin_field_extract_input;
typedef struct ss_plugin_event_parse_input
{
	ss_plugin_owner_t* owner;
	const char *(*get_owner_last_error)(ss_plugin_owner_t *o);
	ss_plugin_table_reader_vtable table_reader;
	ss_plugin_table_writer_vtable table_writer;
	ss_plugin_table_reader_vtable_ext* table_reader_ext;
	ss_plugin_table_writer_vtable_ext* table_writer_ext;
} ss_plugin_event_parse_input;