falco_plugin_api/src/ffi.rs

#[test]
fn bindgen_test_layout_ss_plugin_table_input() {
    const UNINIT: ::std::mem::MaybeUninit<ss_plugin_table_input> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ss_plugin_table_input>(),
        152usize,
        concat!("Size of: ", stringify!(ss_plugin_table_input))
    );
    assert_eq!(
        ::std::mem::align_of::<ss_plugin_table_input>(),
        8usize,
        concat!("Alignment of ", stringify!(ss_plugin_table_input))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_input),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).key_type) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_input),
            "::",
            stringify!(key_type)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).table) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_input),
            "::",
            stringify!(table)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).reader) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_input),
            "::",
            stringify!(reader)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).writer) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_input),
            "::",
            stringify!(writer)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fields) as usize - ptr as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_input),
            "::",
            stringify!(fields)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).reader_ext) as usize - ptr as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_input),
            "::",
            stringify!(reader_ext)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).writer_ext) as usize - ptr as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_input),
            "::",
            stringify!(writer_ext)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fields_ext) as usize - ptr as usize },
        144usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_input),
            "::",
            stringify!(fields_ext)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ss_plugin_init_tables_input {
    pub list_tables: ::std::option::Option<
        unsafe extern "C" fn(
            o: *mut ss_plugin_owner_t,
            ntables: *mut u32,
        ) -> *mut ss_plugin_table_info,
    >,
    pub get_table: ::std::option::Option<
        unsafe extern "C" fn(
            o: *mut ss_plugin_owner_t,
            name: *const ::std::os::raw::c_char,
            key_type: ss_plugin_state_type,
        ) -> *mut ss_plugin_table_t,
    >,
    pub add_table: ::std::option::Option<
        unsafe extern "C" fn(
            o: *mut ss_plugin_owner_t,
            in_: *const ss_plugin_table_input,
        ) -> ss_plugin_rc,
    >,
    pub fields: ss_plugin_table_fields_vtable,
    pub fields_ext: *mut ss_plugin_table_fields_vtable_ext,
}
#[test]
fn bindgen_test_layout_ss_plugin_init_tables_input() {
    const UNINIT: ::std::mem::MaybeUninit<ss_plugin_init_tables_input> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ss_plugin_init_tables_input>(),
        56usize,
        concat!("Size of: ", stringify!(ss_plugin_init_tables_input))
    );
    assert_eq!(
        ::std::mem::align_of::<ss_plugin_init_tables_input>(),
        8usize,
        concat!("Alignment of ", stringify!(ss_plugin_init_tables_input))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).list_tables) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_init_tables_input),
            "::",
            stringify!(list_tables)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_table) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_init_tables_input),
            "::",
            stringify!(get_table)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).add_table) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_init_tables_input),
            "::",
            stringify!(add_table)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fields) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_init_tables_input),
            "::",
            stringify!(fields)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fields_ext) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_init_tables_input),
            "::",
            stringify!(fields_ext)
        )
    );
}
pub type ss_plugin_log_fn_t = ::std::option::Option<
    unsafe extern "C" fn(
        o: *mut ss_plugin_owner_t,
        component: *const ::std::os::raw::c_char,
        msg: *const ::std::os::raw::c_char,
        sev: ss_plugin_log_severity,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ss_plugin_init_input {
    pub config: *const ::std::os::raw::c_char,
    pub owner: *mut ss_plugin_owner_t,
    pub get_owner_last_error: ::std::option::Option<
        unsafe extern "C" fn(o: *mut ss_plugin_owner_t) -> *const ::std::os::raw::c_char,
    >,
    pub tables: *const ss_plugin_init_tables_input,
    pub log_fn: ss_plugin_log_fn_t,
}
#[test]
fn bindgen_test_layout_ss_plugin_init_input() {
    const UNINIT: ::std::mem::MaybeUninit<ss_plugin_init_input> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ss_plugin_init_input>(),
        40usize,
        concat!("Size of: ", stringify!(ss_plugin_init_input))
    );
    assert_eq!(
        ::std::mem::align_of::<ss_plugin_init_input>(),
        8usize,
        concat!("Alignment of ", stringify!(ss_plugin_init_input))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).config) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_init_input),
            "::",
            stringify!(config)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).owner) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_init_input),
            "::",
            stringify!(owner)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_owner_last_error) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_init_input),
            "::",
            stringify!(get_owner_last_error)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tables) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_init_input),
            "::",
            stringify!(tables)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).log_fn) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_init_input),
            "::",
            stringify!(log_fn)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ss_plugin_field_extract_input {
    pub owner: *mut ss_plugin_owner_t,
    pub get_owner_last_error: ::std::option::Option<
        unsafe extern "C" fn(o: *mut ss_plugin_owner_t) -> *const ::std::os::raw::c_char,
    >,
    pub num_fields: u32,
    pub fields: *mut ss_plugin_extract_field,
    pub table_reader: ss_plugin_table_reader_vtable,
    pub table_reader_ext: *mut ss_plugin_table_reader_vtable_ext,
}
#[test]
fn bindgen_test_layout_ss_plugin_field_extract_input() {
    const UNINIT: ::std::mem::MaybeUninit<ss_plugin_field_extract_input> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ss_plugin_field_extract_input>(),
        72usize,
        concat!("Size of: ", stringify!(ss_plugin_field_extract_input))
    );
    assert_eq!(
        ::std::mem::align_of::<ss_plugin_field_extract_input>(),
        8usize,
        concat!("Alignment of ", stringify!(ss_plugin_field_extract_input))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).owner) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_field_extract_input),
            "::",
            stringify!(owner)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_owner_last_error) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_field_extract_input),
            "::",
            stringify!(get_owner_last_error)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).num_fields) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_field_extract_input),
            "::",
            stringify!(num_fields)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fields) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_field_extract_input),
            "::",
            stringify!(fields)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).table_reader) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_field_extract_input),
            "::",
            stringify!(table_reader)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).table_reader_ext) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_field_extract_input),
            "::",
            stringify!(table_reader_ext)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ss_plugin_event_parse_input {
    pub owner: *mut ss_plugin_owner_t,
    pub get_owner_last_error: ::std::option::Option<
        unsafe extern "C" fn(o: *mut ss_plugin_owner_t) -> *const ::std::os::raw::c_char,
    >,
    pub table_reader: ss_plugin_table_reader_vtable,
    pub table_writer: ss_plugin_table_writer_vtable,
    pub table_reader_ext: *mut ss_plugin_table_reader_vtable_ext,
    pub table_writer_ext: *mut ss_plugin_table_writer_vtable_ext,
}
